# gba

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CREDITS.md  LICENCE.md
.devcontainer/: devcontainer.json
cmake/: gba.cmake  toolchain.gba.cmake
include/: geometry.h  memory.h  memory_def.h  memory_map.h  named_type.h  types.h  video.h
libgba/: CMakeLists.txt
libgba/include/: input.h  memory_map.h  types.h  video.h
libgba/source/: video.cpp
libs/: CMakeLists.txt
libs/ptb/: CMakeLists.txt
libs/ptb/gba/: CMakeLists.txt
libs/ptb/gba/base/: CMakeLists.txt
libs/ptb/gba/base/include/ptb/gba/base/: types.h
modules/: CMakeLists.txt
modules/ptb/: CMakeLists.txt
modules/ptb/gba/: CMakeLists.txt  gba.ixx
modules/ptb/gba/base/: CMakeLists.txt  base.ixx  types.ixx
rom/: CMakeLists.txt
rom/source/: main.cpp
source/: frogger.c  frogger.cpp  geometry.c  geometry.cpp  main.cpp  video.c  video.cpp
src/: main.cpp
test/: CMakeLists.txt  main.cpp  test_display.cpp
test/mocks/: mock_dispay_control.h
